--- a/index.html
+++ b/index.html
@@ -63,6 +63,16 @@ allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; pic
 
 <h1>Chestnut + Hazel's Miscellaneous Repository README.md</h1><br>
 
+<!-- 
+
+...  
+
+Chestnut + Hazel's Miscellaneous Repository README.md
+
+... 
+
+-->
+
 <iframe  
 src="https://kennethlarotyamat.github.io/media/text/READMEmiscREP.md" 
 style="aspect-ratio: 8.68/6.86; height: auto; width:100%;" scrolling="yes"   
