--- a/html/tictactoe.html
+++ b/html/tictactoe.html
@@ -13,7 +13,7 @@
 
 <script type="text/babel">
 function Hello() {
-return <h1><p>I'm trying to set up a number of react apps on this page.</p> <p>Right now I'm making buttons</p> <p><a href="https://kennethlarotyamat.github.io/project15/index.html "><button type="button" > Check This Out</button></a></p> <p><a href="https://kennethlarotyamat.github.io/project15/misc/refactoredproject14v004.html "><button type="button" > This is also pretty cool</button></a></p></h1> ;
+return <h1><p>I'm trying to set up a number of react apps on this page.</p> <p>Right now I'm making a tic tac toe game </p> <p><a href="https://kennethlarotyamat.github.io/project15/index.html "><button type="button" > Check This Out</button></a></p> <p><a href="https://kennethlarotyamat.github.io/project15/misc/refactoredproject14v004.html "><button type="button" > This is also pretty cool</button></a></p></h1> ;
 
 
 }
