--- a/html/tictactoe.html
+++ b/html/tictactoe.html
@@ -26,5 +26,7 @@ root.render(<Hello />)
 <script src="https://kennethlarotyamat.github.io/project15/my-react-app/src/App.js"></script>
 <script src="https://kennethlarotyamat.github.io/project15/misc/reactbuttons.js"></script>
 <script src="https://kennethlarotyamat.github.io/project15/project15/misc/tictactoe.js"></script>
+<!-- [ Absolute Path, Remote ] [ https://kennethlarotyamat.github.io/miscellaneous/html/tictactoe.html ] -->
+<!-- C:\Users\KLYam\OneDrive\Documents\GitHub\miscellaneous\html\tictactoe.html -->
 </body>
 </html>
