--- a/html/tictactoe.html
+++ b/html/tictactoe.html
@@ -8,7 +8,7 @@
 <body>
 
 <div id="mydiv"></div>
-<div className="App"></div>
+<div id="mydiv2"></div>
 
 
 <script type="text/babel">
@@ -22,6 +22,14 @@ const container = document.getElementById('mydiv');
 const root = ReactDOM.createRoot(container);
 root.render(<Hello />)
 </script>
+
+<!-- 
+    
+const container = document.getElementById('mydiv2');
+const root = ReactDOM.createRoot(container);
+root.render(<Hello />) 
+
+-->
 
 <script src="https://kennethlarotyamat.github.io/project15/my-react-app/src/App.js"></script>
 <script src="https://kennethlarotyamat.github.io/project15/misc/reactbuttons.js"></script>
