--- a/html/tictactoe.html
+++ b/html/tictactoe.html
@@ -8,8 +8,11 @@
 <body>
 
 <div id="mydiv"></div>
+<!-- video div mydiv is an on page react function -->
 <div id="mydiv2"></div>
+<!-- video div mydiv2 is a video div -->
 <div id="mydiv3"></div>
+<!-- video div mydiv3 is a off page text div -->
 
 
 <script type="text/babel">
@@ -25,11 +28,13 @@ root.render(<Hello />)
 </script>
 
 
+<!-- C:\Users\KLYam\OneDrive\Documents\GitHub\project15\my-react-app\vite\video.js -->
 
-
+<script src="https://kennethlarotyamat.github.io/project15/my-react-app/vite/video.js"></script>
 <script src="https://kennethlarotyamat.github.io/project15/my-react-app/src/App.js"></script>
 <script src="https://kennethlarotyamat.github.io/project15/misc/reactbuttons.js"></script>
 <script src="https://kennethlarotyamat.github.io/project15/project15/misc/tictactoe.js"></script>
+
 <!-- [ Absolute Path, Remote ] [ https://kennethlarotyamat.github.io/miscellaneous/html/tictactoe.html ] -->
 
 </body>
