--- a/html/tictactoe.html
+++ b/html/tictactoe.html
@@ -10,9 +10,9 @@
 <div id="mydiv"></div>
 <!-- video div mydiv is an on page react function -->
 <div id="mydiv2"></div>
-<!-- video div mydiv2 is a video div -->
+<!-- video div mydiv2 is a  reactvideo div -->
 <div id="mydiv3"></div>
-<!-- video div mydiv3 is a off page text div -->
+<!-- video div mydiv3 is a off page react text div -->
 
 
 <script type="text/babel">
