--- a/html/tictactoe.html
+++ b/html/tictactoe.html
@@ -27,6 +27,7 @@ const root = ReactDOM.createRoot(container);
 root.render(<Hello />)
 </script>
 
+<script src="C:\Users\KLYam\OneDrive\Documents\GitHub\project15\misc\reactbuttons.js"></script>
 
 <!-- C:\Users\KLYam\OneDrive\Documents\GitHub\project15\my-react-app\vite\video.js -->
 
