--- a/html/tictactoe.html
+++ b/html/tictactoe.html
@@ -18,7 +18,7 @@
 
 <script type="text/babel">
 function Hello() {
-return <h1><p>I'm trying to set up a number of react apps on this page.</p> <p>Right now I'm making a tic tac toe game, but that hasn't worked. </p> <p><a href="https://kennethlarotyamat.github.io/project15/index.html "><button type="button" > Check This Out</button></a></p> <p><a href="https://kennethlarotyamat.github.io/project15/misc/refactoredproject14v004.html "><button type="button" > This is also pretty cool</button></a></p>  <iframe class="carousel-item" src="https://kennethlarotyamat.github.io/project15/misc/sandbox.html"  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen  > </iframe> </h1> ;
+return <h1><p>I'm trying to set up a number of react apps on this page.</p> <p>Right now I'm making a tic tac toe game, but that hasn't worked. </p> <p><a href="https://kennethlarotyamat.github.io/project15/index.html "><button type="button" > Check This Out</button></a></p> <p><a href="https://kennethlarotyamat.github.io/project15/misc/refactoredproject14v004.html "><button type="button" > This is also pretty cool</button></a></p>  <iframe style="aspect-ratio: 8.68/6.86; height: auto; width:100%;"  class="carousel-item" src="https://kennethlarotyamat.github.io/project15/misc/sandbox.html"  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen  > </iframe> </h1> ;
 
 
 }
