--- a/html/tictactoe.html
+++ b/html/tictactoe.html
@@ -10,6 +10,7 @@
 
 <div id="mydiv"></div>
 <!-- video div mydiv is an on page react function -->
+<!-- style="aspect-ratio: 8.68/6.86; height: auto; width:100%;" -->
 <div id="mydiv2"></div>
 <!-- video div mydiv2 is a  reactvideo div -->
 <div id="mydiv3"></div>
