--- a/html/project8about.html
+++ b/html/project8about.html
@@ -164,7 +164,7 @@ body{--wp--preset--color--black: #000000;--wp--preset--color--cyan-bluish-gray: 
 <div class="entry-content single-content">
 	
 <div class="wp-block-buttons is-content-justification-center is-layout-flex wp-container-core-buttons-layout-1 wp-block-buttons-is-layout-flex">
-<div class="wp-block-button"><a class="wp-block-button__link wp-element-button" href="http://project-8-paws-grooming-service.local/home-page/">Home Page</a></div>
+<div class="wp-block-button"><a class="wp-block-button__link wp-element-button" href="https://kennethlarotyamat.github.io/miscellaneous/html/project8home.html">Home Page</a></div>
 
 
 
