--- a/html/project8about.html
+++ b/html/project8about.html
@@ -168,7 +168,7 @@ body{--wp--preset--color--black: #000000;--wp--preset--color--cyan-bluish-gray: 
 
 
 
-<div class="wp-block-button"><a class="wp-block-button__link wp-element-button" href="http://project-8-paws-grooming-service.local/about/">About</a></div>
+<div class="wp-block-button"><a class="wp-block-button__link wp-element-button" href="https://kennethlarotyamat.github.io/miscellaneous/html/project8about.html   ">About</a></div>
 
 
 
