--- a/index.html
+++ b/index.html
@@ -112,6 +112,9 @@ allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; pic
       
       
       <aside class="grid-item aside-one  ">
+        <li class="griditemsasidelefttextdrasideleft" >
+          <a href="https://kennethlarotyamat.github.io/miscellaneous/html/project8home.html" target="_blank" style="text-decoration: none; color:black;">
+          Paws Grooming Service</a></li> 
 
 
 
