--- a/html/project8home.html
+++ b/html/project8home.html
@@ -7,7 +7,9 @@
 
 	<!-- This site is optimized with the Yoast SEO plugin v21.5 - https://yoast.com/wordpress/plugins/seo/ -->
 	<title>Paws Grooming Service - Project 8</title>
-	<link rel="canonical" href="http://project-8-paws-grooming-service.local/home-page/" />
+
+	<link rel="canonical" href="  http://kennethlarotyamat.github.io/miscellaneous/html/project8home.html  " />
+
 	<meta property="og:locale" content="en_US" />
 	<meta property="og:type" content="article" />
 	<meta property="og:title" content="Paws Grooming Service - Project 8" />
