--- a/html/project8home.html
+++ b/html/project8home.html
@@ -52,7 +52,16 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/14
 		padding: 0 !important;
 	}
 </style>
+
+
+<!-- C:\Users\KLYam\OneDrive\Documents\GitHub\miscellaneous\CSS\project8CSS\dist\block-library\style.min.css -->
+
 <link rel='stylesheet' id='wp-block-library-css' href='http://project-8-paws-grooming-service.local/wp-includes/css/dist/block-library/style.min.css?ver=6.4.1' media='all' />
+
+
+
+
+
 <style id='classic-theme-styles-inline-css'>
 /*! This file is auto-generated */
 .wp-block-button__link{color:#fff;background-color:#32373c;border-radius:9999px;box-shadow:none;text-decoration:none;padding:calc(.667em + 2px) calc(1.333em + 2px);font-size:1.125em}.wp-block-file__button{background:#32373c;color:#fff;text-decoration:none}
