--- a/html/project8about.html
+++ b/html/project8about.html
@@ -46,7 +46,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/14
 	}
 </style>
 <!-- C:\Users\KLYam\OneDrive\Documents\GitHub\kennethlarotyamat.github.io\index.html -->
-
+<link rel='stylesheet' id='wp-block-library-css' href='http://kennethlarotyamat.github.io/miscellaneous/CSS/project8CSS/dist/block-library/style.min.css' media='all' />
 <link rel='stylesheet' id='wp-block-library-css' href='http://kennethlarotyamat.github.io/miscellaneous/CSS/style.min.css' media='all' />
 
 <style id='classic-theme-styles-inline-css'>
