--- a/html/project8home.html
+++ b/html/project8home.html
@@ -54,8 +54,8 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/14
 </style>
 
 
-<!-- C:\Users\KLYam\OneDrive\Documents\GitHub\miscellaneous\CSS\project8CSS\dist\block-library\style.min.css -->
-
+<!-- http://kennethlarotyamat.github.io/miscellaneous/CSS/project8CSS/dist/block-library/style.min.css -->
+<link rel='stylesheet' id='wp-block-library-css' href='http://kennethlarotyamat.github.io/miscellaneous/CSS/project8CSS/dist/block-library/style.min.css' media='all' />
 <link rel='stylesheet' id='wp-block-library-css' href='http://project-8-paws-grooming-service.local/wp-includes/css/dist/block-library/style.min.css?ver=6.4.1' media='all' />
 
 
